--- a/templates/login.html
+++ b/templates/login.html
@@ -10,10 +10,10 @@
     <div class="auth-container">
         <div class="auth-card">
             <h1>Login</h1>
-            <p>Access your career journey</p>
+            <p class="subtitle">Access your career journey</p>
             <form method="POST">
-                <input type="text" name="username" placeholder="Username" required>
-                <input type="password" name="password" placeholder="Password" required>
+                <input type="text" name="username" placeholder="Username" required class="auth-input">
+                <input type="password" name="password" placeholder="Password" required class="auth-input">
                 <button type="submit" class="btn">Login</button>
             </form>
             <p class="link">New here? <a href="{{ url_for('signup') }}">Sign Up</a></p>
