--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="auth-container">
-        <div class="auth-card">
+        <div class="auth-card animate-fade-in">
             <h1>Sign Up</h1>
-            <p>Start your career journey</p>
+            <p class="subtitle">Start your career journey</p>
             <form method="POST">
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="password" name="password" placeholder="Password" required>
